--- a/Blog_turismo_Prac_Ver.html
+++ b/Blog_turismo_Prac_Ver.html
@@ -12,24 +12,24 @@
             font-family:Tahoma, sans-serif;
             margin:0;
             padding:0;
-            background-color: rgb(172, 231, 202);
-            color: rgb(34, 57, 57);
+            background-color: #f9f9f9;
+            color: #333;
         }
         header {
-            background-color: rgb(14, 107, 53);
-            color: rgb(248, 248, 248);
+            background-color: #006994;
+            color: white;
             text-align: center;
             padding: 20px;
         }
         nav {
             text-align: center;
             background:#eaeaea;
-            padding: 10px;
+            padding: 10px 0;
         }
         nav a {
             margin:0 9 px;
             text-decoration: none;
-            color:#eaeaea;
+            color:#006994;
             font-weight: bold;
         }
         article {
@@ -41,7 +41,7 @@
             box-shadow:0 4px 6px rgba(0, 0, 0, 0.1) ;
         }
         h1, h2, h3 {
-            color: rgb(228, 233, 233);
+            color: #006994;
         }
         img {
             max-width: 100%;
@@ -50,7 +50,7 @@
         }
         footer {
             text-align: center;
-            background: #21674b;
+            background: #006994;
             color: white;
             padding: 10px 0;
             margin-top: 20px;
