3era versiónblog_viajes_prac_versiones

--- a/Blog_turismo_Prac_Ver.html
+++ b/Blog_turismo_Prac_Ver.html
@@ -61,7 +61,7 @@
 <!-- Parte visible del código -->
 <body>
     <header>
-        <h1>No Todos Los Que Deambulan Están Perdidos</h1>
+        <h1>Book&Travel</h1>
         <p>Un blog para los amantes de los viajes y el turismo</p>
     </header>
     <nav>
@@ -77,7 +77,12 @@
             <img src="Images_blog/Francia.jpg" alt="Imagen Francia">
             <h3>2. España</h3>
             <img src="Images_blog/España.jpg" alt="Imagen España">
-
+            <h3>3. Estados Unidos</h3>
+            <img src="Images_blog/Estados Unidos.jpg" alt="Imagen Estados Unidos">
+            <h3>4. China</h3>
+            <img src="Images_blog/China.jpg" alt="Imagen China">
+            <h3>5. Italia</h3>
+            <img src="Images_blog/Italia.jpg" alt="Imagen Italia">
         </article>
     </main>
 
