--- a/Blog_turismo_Prac_Ver.html
+++ b/Blog_turismo_Prac_Ver.html
@@ -17,7 +17,7 @@
         }
         header {
             background-color: #006994;
-            color: white;
+            color: #f9f9f9;
             text-align: center;
             padding: 20px;
         }
@@ -65,9 +65,9 @@
         <p>Un blog para los amantes de los viajes y el turismo</p>
     </header>
     <nav>
-        <a href="#destinos">Destinos</a>
-        <a href="#tips">Tips de Viajes</a>
-        <a href="#contacto">Contacto</a>
+        <a href="#destinos">|Destinos|</a>
+        <a href="#tips">Tips de Viajes|</a>
+        <a href="#contacto">Contacto|</a>
     </nav>
     <main>
         <article id="destinos">
